Attribution for color picker

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 	</div>
 </div>
 <input type='text' id="flat" />
+<div>
+Colorpicker by <a href="https://github.com/bgrins/spectrum">@bgrins</a>.
+</div>
 
 <script type="text/javascript">
 $("#flat").spectrum({
